horizontal scroll fixed

--- a/airbnb_style.css
+++ b/airbnb_style.css
@@ -1,6 +1,8 @@
-* {
+*{
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  max-width: 100%;
 }
 
 .container{
@@ -9,23 +11,22 @@
   background-color: transparent;
   width: 100vw;
   height: 100vh;
+  opacity: 0.7;
 }
 
 #berlin{
   background-image: url('img/berlin.jpg');
-  opacity: 0.8;
+
 }
 
 #new_york{
   background-image: url('img/new_york.jpg');
-  opacity: 0.8;
   margin-top: 4px;
   margin-bottom: 4px;
 }
 
 #tokyo{
   background-image: url('img/tokyo.jpg');
-  opacity: 0.8;
 }
 
 .container > span{
@@ -36,4 +37,5 @@
   color: white;
   font-size: 60px;
   font-weight: bold;
+  text-shadow: 0 0 12px black;
 }
